# VoiceWatch

./: .editorconfig  .gitattributes  .gitignore  AMO_SOURCE_README.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  build.rs
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  NATIVE_MESSAGING.md  PRIVACY.md  RELEASING.md  ROADMAP.md  SAFETY_BOUNDARIES.md
extension/: README.md  connect.css  connect.html  connect.js  help.css  help.html  help.js  manifest.json  rejoin.js  rejoin_page.js  service_worker.js  setup.css  setup.html  setup.js
installer/: voice-watch.iss
scripts/: build-installer.ps1  package-extensions.ps1  register-native-host.ps1  test-update-handoff.ps1  unregister-native-host.ps1
src/: app_state.rs  browser_support.rs  countdown.rs  ipc.rs  main.rs  messages.rs  monitor.rs  native_host_registration.rs  native_messaging.rs  overlay.rs  process.rs  rejoin.rs  roblox_logs.rs  settings.rs  settings_window.rs  single_instance.rs  tray.rs  updates.rs
tests/: extension_service_worker.test.cjs
