[package]
name = "voice-watch"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A privacy-first lightweight Windows tray app that tracks Roblox voice chat suspension timers and notifies you when VC is restored."
readme = "README.md"
keywords = ["windows", "roblox", "voice-chat", "tray", "native-messaging"]
categories = ["gui", "os::windows-apis"]

[dependencies]
anyhow = "1.0"
open = "5.3"
regex = "1.11"
rfd = { version = "0.15", default-features = false, features = ["common-controls-v6"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.30"
tray-icon = "0.24"
uuid = { version = "1.10", features = ["serde", "v4"] }
winit = "0.30"

[dev-dependencies]
tempfile = "3.12"

[profile.release]
codegen-units = 1
lto = "thin"
strip = "symbols"
