[package]
name = "voice-watch"
version = "0.1.6"
edition = "2021"
build = "build.rs"
license = "MIT"
description = "A privacy-first lightweight Windows tray app that tracks Roblox voice chat suspension timers and notifies you when VC is restored."
readme = "README.md"
keywords = ["windows", "roblox", "voice-chat", "tray", "native-messaging"]
categories = ["gui", "os::windows-apis"]

[dependencies]
anyhow = "1.0"
open = "5.3"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.30"
tray-icon = "0.24"
ureq = "2.12"
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_Security", "Win32_System_Diagnostics_Debug", "Win32_System_LibraryLoader", "Win32_System_Threading", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging"] }
winreg = "0.52"
winit = "0.30"

[dev-dependencies]
tempfile = "3.12"

[build-dependencies]
winresource = "0.1"

[package.metadata.winresource]
OriginalFilename = "voice-watch.exe"
FileDescription = "Voice Watch"
ProductName = "Voice Watch"
LegalCopyright = "Copyright (c) 2026 Voice Watch contributors"

[profile.release]
codegen-units = 1
lto = "thin"
strip = "symbols"
